# edge-ai-suites

./: .gitmodules
manufacturing-ai-suite/: README.md
manufacturing-ai-suite/hmi-augmented-worker/: README.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/: third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-multimodal/weld-data-simulator/: publisher.py
manufacturing-ai-suite/industrial-edge-insights-time-series/: README.md  third-party-programs.txt
manufacturing-ai-suite/industrial-edge-insights-vision/: .env  .env_pcb_anomaly_detection  .env_weld_porosity_classification  .env_worker_safety_gear_detection
manufacturing-ai-suite/industrial-edge-insights-vision/helm/: Chart-pallet-defect-detection.yaml  Chart-pcb-anomaly-detection.yaml  Chart-weld-porosity.yaml  Chart-worker-safety-gear-detection.yaml  Chart.yaml  values_pallet_defect_detection.yaml  values_pcb_anomaly_detection.yaml  values_weld_porosity_classification.yaml  values_worker_safety_gear_detection.yaml
metro-ai-suite/image-based-video-search/: .env  compose.yml
metro-ai-suite/image-based-video-search/chart/: Chart.yaml  values.yaml
metro-ai-suite/interactive-digital-avatar/docs/: get-started.md
metro-ai-suite/metro-vision-ai-app-recipe/: .env  README.md  compose-scenescape.yml  compose-without-scenescape.yml
metro-ai-suite/smart-nvr/: README.md
metro-ai-suite/smart-nvr/charts/: user_value_override.yaml  values.yaml
metro-ai-suite/video-processing-for-nvr/docker/: README.md  docker-compose.yml  run.sh
metro-ai-suite/video-processing-for-nvr/example/VA_example/VA_display/decode_detection_classification_display/GPUNPU/va_surface_map_npu/: CMakeLists.txt  build.sh  va_surface_map_npu.cpp
metro-ai-suite/video-processing-for-nvr/example/VA_example/VA_display/decode_detection_display/GPU/va_surface_sharing/: CMakeLists.txt  build.sh  va_surface_sharing_264.cpp  va_surface_sharing_265.cpp
metro-ai-suite/video-processing-for-nvr/example/VA_example/decode_detection/surface_map/: CMakeLists.txt  build.sh  dec_det.cpp
retail-ai-suite/: README.md
robotics-ai-suite/components/adbscan/: README.md
robotics-ai-suite/components/collaborative-slam/: README.md
robotics-ai-suite/components/fast-mapping/: README.md
robotics-ai-suite/components/groundfloor/: README.md
robotics-ai-suite/components/its-planner/: README.md
robotics-ai-suite/components/multicam-demo/: Makefile  README.md
robotics-ai-suite/components/object-detection/: README.md
robotics-ai-suite/components/simulations/: README.md
robotics-ai-suite/components/wandering/: README.md
robotics-ai-suite/docs/: index.rst
robotics-ai-suite/docs/embodied/: fragment_packages-jammy.rst  index.rst  packages_list.md  release_note.rst  sample_pipelines.rst
robotics-ai-suite/docs/robotics/: index.rst
robotics-ai-suite/pipelines/mpc-demo/: README.md
(+340 files in other folders)
